drone/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
  namespace: stageui
  labels:
    app: docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: yandex.cloud/node-group-id
                operator: In
                values:
                - catc7e6q6v4kviesf5cg
      containers:
      - name: docs
        image: cr.yandex/crptshuuct3ne1mn7rg1/stageui-docs:_VERSION
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
