drone/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: stageui
spec:
  selector:
    app: docs
  ports:
    - name: front
      protocol: TCP
      port: 80
      targetPort: 80
