drone/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docs
  namespace: stageui
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - stageui.scriptheads.io
      - stageui.shds.io
      secretName: stageui-docs-tls
  rules:
    - host: stageui.shds.io
      http: &http_rules
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: docs
              port:
                number: 80
    - host: stageui.scriptheads.io
      http: *http_rules
